provide temporary fix for heading overflow that was breaking container. reduce number of team members shown on index.html and add a view more button that leads to who-we-are.html

--- a/src/assets/scss/01-base/_typography.scss
+++ b/src/assets/scss/01-base/_typography.scss
@@ -20,6 +20,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $sans-serif;
   font-weight: 900;
   color: $header-font-color;
+  hyphens: auto;
+  word-wrap: break-word;
   a {
     color: $header-font-color;
   }
@@ -81,12 +83,14 @@ hgroup {
   text-transform: none;
   font-weight: 300;
   color: $body-font-color;
+  hyphens: auto;
 }
 
 .supraheader {
   @extend .subheader;
   font-weight: 700;
   text-transform: uppercase;
+  hyphens: auto;
 }
 
 body, p, li {
